@@ -32,6 +32,9 @@ Version 1.3.8+svn:
  * units:
    * balancing changes:
      * created undead variations for the 'bat' and 'gryphon' race
+ * miscellaneous and bug fixes:
+   * various bug fixes and code cleanups
+   * fixed a glitch where an item halo shifted position when zooming
 
 Version 1.3.8:
  * campaigns:
